--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-jsdoc": "^48.5.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prebid": "file:./plugins/eslint",
+    "eslint-plugin-prebidjs": "file:./plugins/eslint",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "execa": "^1.0.0",
